java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
apiVersion: apps/v1

kind: Deployment
metadata:
  name: spring-boot-app
  namespace: production
  labels:
    app: spring-boot-app


spec:
  replicas: 2


  selector:
    matchLabels:
      app: spring-boot-app


  template:
    metadata:
      labels:
        app: spring-boot-app


    spec:
      containers:
      - name: spring-boot-app
        image: 743887468885.dkr.ecr.ap-south-1.amazonaws.com/production-eks-dev/spring-boot-app:6


        ports:
        - containerPort: 8080
