java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/service.yml
apiVersion: v1
kind: Service


metadata:
  name: spring-boot-app-service
  namespace: production


spec:
  type: ClusterIP


  selector:
    app: spring-boot-app


  ports:
    - name: http
      port: 80
      targetPort: 8080
