java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: spring-boot-app-ingress
  namespace: production

  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-boot-app-service
                port:
                  number: 80
